[gd_scene load_steps=6 format=3 uid="uid://db00u6fgix4cb"]

[ext_resource type="PackedScene" uid="uid://bl01cksguqtl1" path="res://character.tscn" id="1_kgmq5"]
[ext_resource type="Script" uid="uid://x5c68mpumnyw" path="res://game.gd" id="1_la2dq"]
[ext_resource type="PackedScene" uid="uid://vm3icu05qghs" path="res://dustBunny.tscn" id="2_t1mi2"]
[ext_resource type="PackedScene" uid="uid://cwqw561dmlfo3" path="res://cheese.tscn" id="3_r6g50"]
[ext_resource type="AudioStream" uid="uid://dhsn3tohivflm" path="res://Assets/mouse game music-converted.mp3" id="5_8d524"]

[node name="Game" type="Node2D"]
script = ExtResource("1_la2dq")

[node name="Mouse" parent="." instance=ExtResource("1_kgmq5")]
position = Vector2(702, 180)

[node name="DustBunny" parent="." instance=ExtResource("2_t1mi2")]
position = Vector2(392, 202)

[node name="CheeseBox" type="Node2D" parent="."]

[node name="CheeseProbably" parent="CheeseBox" instance=ExtResource("3_r6g50")]
position = Vector2(578, 444)

[node name="Cheese2" parent="CheeseBox" instance=ExtResource("3_r6g50")]
position = Vector2(78, 562)

[node name="Cheese3" parent="CheeseBox" instance=ExtResource("3_r6g50")]
position = Vector2(961, 587)

[node name="Cheese4" parent="CheeseBox" instance=ExtResource("3_r6g50")]
position = Vector2(936, 185)

[node name="Cheese5" parent="CheeseBox" instance=ExtResource("3_r6g50")]
position = Vector2(848, 403)

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8d524")
autoplay = true
parameters/looping = true
